--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,37 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+   
+
+
+
     <servlet>
         <servlet-name>about</servlet-name>
-        <jsp-file>/about.jsp</jsp-file>
+        <jsp-file>/about.jsp</jsp-file>        
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>about</servlet-name>
         <url-pattern>/about</url-pattern>
-        <url-pattern>/GUYOT Arnaud</url-pattern>
+        <url-pattern>/durgeshkumar</url-pattern>
+     
     </servlet-mapping>
+
+
+
     <servlet>
         <servlet-name>register</servlet-name>
-        <jsp-file>/register.jsp</jsp-file>
+        <jsp-file>/register.jsp</jsp-file>        
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>register</servlet-name>
         <url-pattern>/register</url-pattern>
+     
     </servlet-mapping>
+
+
+
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
-        <servlet-class>com.gyt.mycart.servlets.RegisterServlet</servlet-class>
+        <servlet-class>com.learn.mycart.servlets.RegisterServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>com.gyt.mycart.servlets.LoginServlet</servlet-class>
+        <servlet-class>com.learn.mycart.servlets.LoginServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LogoutServlet</servlet-name>
-        <servlet-class>com.gyt.mycart.servlets.LogoutServlet</servlet-class>
+        <servlet-class>com.learn.mycart.servlets.LogoutServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ProductOperationServlet</servlet-name>
-        <servlet-class>com.gyt.mycart.servlets.ProductOperationServlet</servlet-class>
+        <servlet-class>com.learn.mycart.servlets.ProductOperationServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
@@ -54,4 +68,8 @@
             30
         </session-timeout>
     </session-config>
+    
+    
+    
+   
 </web-app>
