--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
    
-    <filter>
+<filter>
     <filter-name>Set Character Encoding</filter-name>
     <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
     <init-param>
@@ -16,6 +16,16 @@
 <filter-mapping>
     <filter-name>Set Character Encoding</filter-name>
     <url-pattern>/*</url-pattern>
+</filter-mapping>
+
+<filter>
+    <filter-name>IpFilter</filter-name>
+    <filter-class>com.learn.mycart.filter.IpFilter</filter-class>
+</filter>
+
+<filter-mapping>
+    <filter-name>IpFilter</filter-name>
+    <url-pattern>/*</url-pattern> <!-- Class called when the user makes a request on this url -->
 </filter-mapping>
 
 
